--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --font-family: "Poppins", sans-serif;
+}
 body {
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: var(--font-family);
   color: white;
   margin: 0;
   padding: 0;
@@ -67,8 +71,8 @@ body {
 
 .hero-content h1 {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
-  padding-left: 2.25rem;
+  margin-bottom: 0.1rem;
+  padding-left: 1rem;
 }
 
 .hero-content h2 {
@@ -78,7 +82,7 @@ body {
 }
 
 .hero-content p {
-  font-size: 1.2rem;
+  font-size: 1.325rem;
   max-width: 50rem;
 }
 
