--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
   --font-family: "Poppins", sans-serif;
 }
 body {
@@ -21,7 +21,7 @@ header {
   align-items: center;
   /* background-color:rgba(0, 0, 0, 0.5); */
   padding: 1.5rem 1.5rem;
-  position: absolute; 
+  position: absolute;
   top: 0;
   left: 0;
   box-sizing: border-box;
@@ -61,7 +61,6 @@ header {
   padding-right: 1.875rem; /* 30px */
 }
 
-
 .hero-section {
   height: 100vh;
   background: url("../assets/Botanical.jpg") no-repeat center center/cover;
@@ -83,7 +82,7 @@ header {
 .hero-content h2 {
   font-size: 10rem;
   margin: 0;
-  font-weight:800;
+  font-weight: 800;
 }
 
 .hero-content p {
