--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,12 @@
 :root {
   --font-family: "Poppins", sans-serif;
 }
+
+html {
+
+  scroll-behavior: smooth; /*para desplazamientos suaves*/
+}
+
 body {
   font-family: var(--font-family);
   color: white;
@@ -77,6 +83,7 @@ header {
   font-size: 2rem;
   margin-bottom: 0.125rem;
   padding-left: 1rem;
+  align-items: center;
 }
 
 .hero-content h2 {
@@ -97,24 +104,34 @@ header {
 
 .title-shadow {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  margin: 0;
+
 }
 
 .text-shadow {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  margin: 0;
+}
+
+.button-container{ /* pendiente checar como centrar el button*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 200px;
 }
 
 .scroll-button {
-  position: absolute;
-  bottom: 70px;
-  background: transparent;
+  right: 15px;
+  width: 50px;
+  height: 50px;
   border: none;
+  border-radius: 50%;
+  padding: 5px;
   cursor: pointer;
+  bottom: 70px;
+  border: none;
 }
 
-.scroll-button img {
-  width: 3rem;
-  height: 3rem;
-}
 
 .content-section {
   padding: 50px 20px;
@@ -130,4 +147,117 @@ header {
 .content-section p {
   font-size: 1.2rem;
   color: #333;
+}
+
+/* ---------------Aquí es para la segunda sección de la home page---------------*/
+
+.product-section-text-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.product-section__title{
+  margin: 40px 0 0;
+  padding-left: 90px;
+  color: black;
+  font-size: 70px;
+  font-weight: 600;
+  flex: 1;
+}
+
+.product-section__text {
+  color: gray;
+  font-size: 15px;
+  font-weight: 400;
+  padding-top: 40px;
+  margin: 0 90px 0 0;
+  max-width: 600px;
+}
+
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  background-color: white;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  text-align: center;
+  position: relative;
+  color: black;
+}
+
+.card-img {
+  position: relative;
+}
+
+.card-img img:first-child {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.like-icon {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 45px;
+  height: 45px;
+  background-color: rgba(255, 255, 255, 0.283);
+  border: none;
+  border-radius: 50%;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.card-content {
+  padding: 0 15px 15px 15px;
+  text-align: left;
+}
+
+.card-content h2 {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.item-name {
+  margin: 0 5px 5px;
+}
+
+.item-location{
+  color: gray;
+  margin-bottom: 5px;
+}
+
+.item-datetime {
+  font-weight: 400;
+  margin-bottom: 5px;
+}
+
+.arrow-icon {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  width: 48px;
+  height: 48px;
+  background-color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 50%;
+  padding: 5px;
+  cursor: pointer;
+  
+}
+
+.svg-heart-icon{
+  stroke: white;
+}
+
+.svg-arrow-icon {
+  stroke: white;
 }
