--- a/core/static/core/styles/product-details.css
+++ b/core/static/core/styles/product-details.css
@@ -6,6 +6,7 @@
   }
   
   body {
+    /* font-size: 62.5%; */
     /* background-color: #cb0000; */
     display: flex;
     justify-content: center;
