--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,11 +1,353 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trueque Express</title>
-</head>
-<body>
-    <h1>Inicio</h1>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Primer boceto</title>
+    <link rel="stylesheet" href="{% static 'core/styles/style-home.css' %}" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div data-aos="fade-in" class="nav-left">
+          <ul>
+            <li><img src="" alt="" class="logo" /></li>
+            <li>
+              <a
+                data-aos="zoom-in"
+                data-aos-duration="2000"
+                class="nav-item"
+                href="#"
+                >Inicio</a
+              >
+            </li>
+            <li>
+              <a
+                data-aos="zoom-in"
+                data-aos-duration="2000"
+                class="nav-item"
+                href="#"
+                >Nosotros</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="nav-right">
+          <ul>
+            <li>
+              <a
+                data-aos="zoom-in"
+                data-aos-duration="2000"
+                class="nav-item"
+                href="#"
+                >Registro</a
+              >
+            </li>
+            <li>
+              <a
+                data-aos="zoom-in"
+                data-aos-duration="2000"
+                class="nav-item"
+                href="#"
+                >Perfil</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-section">
+        <div class="hero-content">
+          <h1
+            class="subtext-shadow"
+            data-aos="fade-up"
+            data-aos-duration="2000"
+          >
+            Es tiempo de
+          </h1>
+          <h2 class="title-shadow" data-aos="fade-up" data-aos-duration="2000">
+            Reutilizar
+          </h2>
+          <p class="text-shadow" data-aos="fade-up" data-aos-duration="2000">
+            Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia
+            un futuro más sostenible!
+          </p>
+          <div class="button-container">
+            <button
+              type="button"
+              onclick="location.href='#product-section'"
+              class="scroll-button"
+              data-aos="slide-up"
+              data-aos-duration="2000"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                class="svg-down-arrow-icon"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12 2.25a.75.75 0 0 1 .75.75v16.19l6.22-6.22a.75.75 0 1 1 1.06 1.06l-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 1 1 1.06-1.06l6.22 6.22V3a.75.75 0 0 1 .75-.75Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!------------------Lista de artículos-------------------------->
+      <section id="product-section">
+
+        <div class="product-section-text-container">
+          <div>
+            <h2 class="product-section__title">Nuevos artículos</h2>
+          </div>
+          <div>
+            <p class="product-section__text">Aquí encontrarás tus artículos favoritos para intercambiar por alguno que ya no necesites. Recuerda, ¿para qué tirar si puedes reciclar?</p>
+          </div>
+        </div>
+        
+
+        <div class="card-container">
+          <!--------Carousel--------->
+          
+          {% for articulo in articulos %}
+          <div class="card">
+            
+            {% if articulo.imagen %}
+            <img src="{{ articulo.imagen.url }}" alt="" />
+            {% endif %}
+              
+            <div class="card-img">
+              {% comment %} <img src="{{ articulo.imagen.url }}" alt="" /> {% endcomment %}
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">{{articulo.nombre}}</h2>
+              <p class="item-location">{{articulo.ubicacion}}</p>
+              <p class="item-datetime">{{articulo.fecha_subida}}</p>
+              {% comment %} <a href="{% url 'articulo-detail' articulo.pk %}" type="button" class="arrow-icon"></a> {% endcomment %}
+              <button type="button" class="arrow-icon" onclick="location.href='{% url 'articulo-detail' articulo.pk %}'">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          {% endfor %}
+            
+          <!-- Container #1 -->
+        <!-- <div class="card">
+            <div class="card-img">
+              {% comment %} <img src="{{ articulo.imagen.url }}" alt="image1" /> {% endcomment %}
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 1</h2>
+              <p class="item-location">Huixtla</p>
+              <p class="item-datetime">Hace 1 día</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>--> 
+
+          <!-- Container #2 -->
+         <!-- <div class="card">
+            <div class="card-img">
+              {% comment %} <img src="../assets/img2.jpg" alt="image2" /> {% endcomment %}
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 2</h2>
+              <p class="item-location">Mazatán</p>
+              <p class="item-datetime">Hace 7 días</p>
+            </div>
+            <button type="button" class="arrow-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="svg-arrow-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                />
+              </svg>
+            </button>
+          </div>-->
+
+          <!-- Container #3 -->
+          <!--<div class="card">
+            <div class="card-img">
+              {% comment %} <img src="../assets/img3.jpg" alt="image3" /> {% endcomment %}
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 3</h2>
+              <p class="item-location">Tapachula</p>
+              <p class="item-datetime">Hace 3 horas</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div> -->
+
+          <!-- Container #1 -->
+         <!-- <div class="card">
+            <div class="card-img">
+              {% comment %} <img src="../assets/img1.jpg" alt="image1" /> {% endcomment %}
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 4</h2>
+              <p class="item-location">Huixtla</p>
+              <p class="item-datetime">Hace 5 días</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </main> -->
+    <!-----------Librerías y Scripts----------->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="{% static 'core/scriptsjs/script.js' %}"></script>
+  </body>
 </html>
