--- a/styles/product-details.css
+++ b/styles/product-details.css
@@ -144,5 +144,140 @@
     .contact-button {
       width: 100%;
     }
+
+    /**********************Form************************/
+    .form-container {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 400px;
+      padding: 20px;
+  }
+  
+  .profile-section {
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+  }
+  
+  .profile-avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #d9d9d9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 15px;
+  }
+  
+  .profile-avatar span {
+      font-size: 24px;
+      color: white;
+  }
+  
+  .profile-info h2 {
+      font-size: 18px;
+      font-weight: bold;
+  }
+  
+  .profile-info p {
+      font-size: 14px;
+      color: #777;
+      margin-top: 5px;
+  }
+  
+  .button-section {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+  }
+  
+  button {
+      border: none;
+      padding: 10px 20px;
+      font-size: 14px;
+      border-radius: 5px;
+      cursor: pointer;
+  }
+  
+  .email-button {
+      background-color: #32CD32; /* Verde brillante */
+      color: white;
+      width: 100%;
+      /* flex: 1; */
+  }
+  
+  .favourite-button,
+  .report-button {
+      background-color: white;
+      border: 1px solid #d9d9d9;
+      color: #333;
+      flex: 1;
+      margin-left: 10px;
+  }
+  
+  .divider {
+      width: 100%;
+      height: 1px;
+      background-color: #e0e0e0;
+      margin: 15px 0;
+  }
+  
+  .report-section {
+      margin-top: 15px;
+  }
+  
+  .report-section h3 {
+      font-size: 16px;
+      margin-bottom: 10px;
+  }
+  
+  form label {
+      display: block;
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: #333;
+  }
+  
+  input[type="radio"] {
+      margin-right: 10px;
+  }
+  
+  textarea {
+      width: 100%;
+      height: 80px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #d9d9d9;
+      border-radius: 5px;
+      font-size: 14px;
+      color: #333;
+  }
+  
+  .button-group {
+      display: flex;
+      justify-content: space-between;
+  }
+  
+  .cancel-button {
+      background-color: white;
+      border: 1px solid #d9d9d9;
+      color: #333;
+      padding: 10px 20px;
+      flex: 1;
+      margin-right: 10px;
+  }
+  
+  .send-report-button {
+      background-color: #32CD32;
+      color: white;
+      padding: 10px 20px;
+      flex: 1;
+  }
   }
   
