Cambios de vistas

--- a/core/static/core/styles/style-home.css
+++ b/core/static/core/styles/style-home.css
@@ -177,8 +177,10 @@ header {
 
 
 .card-container {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* display: flex;
+  justify-content: center; */
   gap: 20px;
   padding: 20px;
 }
