--- a/core/static/core/styles/style_listado_articulos.css
+++ b/core/static/core/styles/style_listado_articulos.css
@@ -19,6 +19,32 @@ header {
   position: relative;
   z-index: 10; /* superponer el header por encima del hero */
 }
+.container-bread{
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  /* padding-left: 30px; */
+  /* margin-left: 30px; */
+  /* text-align: center; */
+  width: 100%;
+    height: 100%;
+    background-color: #03dede;
+    /* padding: 4rem; */
+}
+
+.breadcrumb {
+  font-size: 30px;
+  /* margin-bottom: 20px; */
+  color: black;
+  font-weight: 800;
+}
+
+.breadcrumb a {
+  margin-left: 50px;
+  text-decoration: none;
+  color: #555;
+}
 
 .navbar {
   width: 100%;
@@ -98,7 +124,6 @@ header {
 }
 
 .subtext-shadow {
-  /* margin-top: 150px; */
   text-align: left;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
@@ -156,6 +181,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* flex-wrap: wrap; */
 }
 .product-section__title{
   margin: 40px 0 0;
@@ -177,8 +203,13 @@ header {
 
 
 .card-container {
-  display: flex;
-  justify-content: center;
+  /* width: 100vw; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
   gap: 20px;
   padding: 20px;
 }
@@ -198,10 +229,25 @@ header {
   position: relative;
 }
 
+.zoom {
+  transition: transform 0.3s ease; 
+}
+
+.zoom:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+}
+
+
 .card-img img:first-child {
   width: auto;
   height: 200px;
   object-fit: cover;
+}
+
+.no-images{
+  text-align: center;
+  color: blueviolet;
 }
 
 .like-icon {
@@ -226,6 +272,8 @@ header {
   font-size: 20px;
   margin-bottom: 5px;
 }
+
+
 
 .item-name {
   margin: 0 5px 5px;
@@ -263,25 +311,19 @@ header {
   stroke: white;
 }
 
-.footer{
-  height: 100px;
-  /* width: 100%; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#button-see-all{
-  width: auto;
-  height: auto;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: rgb(255, 255, 255);
-  font-size: 24px;
-  font-family: 'Times New Roman', Times, serif;
+.pagination{
   font-weight: 700;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 35px;
+  text-align: center;
+  color: black;
+  height: 60px;
 }
 
-#button-see-all:hover{
-  background-color: aquamarine;
+.pagination > button{
+  font-size: 35px;
+}
+.pagination > button:hover{
   cursor: pointer;
 }
+
