--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,14 +1,20 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Primer boceto</title>
-    <link rel="stylesheet" href="{% static 'core/styles/style-home.css' %}" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
+{% extends 'core/header-base.html' %}
+{% comment %} <!DOCTYPE html> {% endcomment %}
+{% comment %} <html lang="es"> {% endcomment %}
+  {% comment %} <head> {% endcomment %}
+    {% comment %} <meta charset="UTF-8" /> {% endcomment %}
+    {% comment %} <meta name="viewport" content="width=device-width, initial-scale=1.0" /> {% endcomment %}
+    
+    {% block title %}
+      Trueque
+    {% endblock %}
+      
+    {% comment %} <title>Primer boceto</title> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="{% static 'core/styles/style-home.css' %}" /> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> {% endcomment %}
+  {% comment %} </head> {% endcomment %}
+  {% comment %} <body> {% endcomment %}
     <header>
       <nav class="navbar">
         <div data-aos="fade-in" class="nav-left">
@@ -354,5 +360,5 @@
     <!-----------Librerías y Scripts----------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="{% static 'core/scriptsjs/script.js' %}"></script>
-  </body>
-</html>
+  {% comment %} </body> {% endcomment %}
+{% comment %} </html> {% endcomment %}
