--- a/core/static/core/styles/style-home.css
+++ b/core/static/core/styles/style-home.css
@@ -54,6 +54,16 @@ header {
   transition: background-color 0.3s, color 0.3s;
 }
 
+.navbar ul li form button{
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.625rem 1.25rem; /* 10px 20px */
+  border: 0.125rem solid white; /* 2px */
+  border-radius: 1.875rem; /* 30px */
+  transition: background-color 0.3s, color 0.3s;
+}
+
 .nav-item {
   font-size: 1.125rem;
 }
