--- a/styles/style.css
+++ b/styles/style.css
@@ -112,15 +112,28 @@ header {
   backdrop-filter: blur(20px);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  z-index: 3;
+}
+
+.form-box {
+  z-index: 4;
 }
 
 .wrapper .form-box {
   width: 100%;
   padding: 40px;
+}
+
+/* .wrapper .form-box.login {
+  display: none;
+} */
+
+.wrapper .form-box.register {
+  display: none;
 }
 
 .wrapper .icon-close {
@@ -251,12 +264,13 @@ header {
   height: 100vh;
   background: url("../assets/Botanical.jpg") no-repeat center center/cover;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
   position: relative;
+  z-index: 1;
 }
 
 .hero-content h1 {
