Se agrega en el index el boton subir articulo (cuando el usuario ha inciado sesion)

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -65,6 +65,15 @@
                 >Perfil</a
               >
             </li>
+            <li></li>
+              <a
+                data-aos="zoom-in"
+                data-aos-duration="2000"
+                class="nav-item"
+                href="#"
+                >Subir articulo</a
+              >
+            </li>
             <li>
               <form id="logout-form" method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
