Se pone en el detalle del articulo el nombre del usuario que lo subió

--- a/core/templates/core/articulo_detail.html
+++ b/core/templates/core/articulo_detail.html
@@ -39,7 +39,7 @@
 
         <div class="product-info">
           <h1 class="product-title">{{articulo.nombre}}</h1>
-          <p class="product-user">Subido por: Juan Pérez</p>
+          <p class="product-user">Subido por: {{articulo.usuario}}</p>
           <p class="product-date">Publicado el: {{articulo.fecha_subida}}</p>
           <p class="product-description">
             {% comment %} {{ articulo.descripcion }} {% endcomment %}
