--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -70,7 +70,7 @@
                 data-aos="zoom-in"
                 data-aos-duration="2000"
                 class="nav-item"
-                href="#"
+                href="{% url 'upload-articulo' %}"
                 >Subir articulo</a
               >
             </li>
