Se modifica el margen de la imagen de el articulo cuando no hay imagenes

--- a/core/templates/core/articulos_listado.html
+++ b/core/templates/core/articulos_listado.html
@@ -128,7 +128,7 @@
               {% if articulo.imagen %}
               <img src="{{articulo.imagen.url}}" alt="image1" class="zoom" data-articulo-id="{{articulo.pk}}"/>
               {% else %}
-              <h2 class="no-images">No hay imagenes disponibles</h2>
+              <h2 class="no-images" style="margin-bottom: 95px;">No hay imagenes disponibles</h2>
               {% endif %}
                 
               <button type="button" class="like-icon">
