Se agrega el atributo enctype a formulario para permitir el envio de imagenes

--- a/core/templates/core/articulo_form.html
+++ b/core/templates/core/articulo_form.html
@@ -23,7 +23,7 @@
     <div class="container">
    <h2>Subir un nuevo artículo</h2>
 
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     <!-- Campo para subir imagen -->
