--- a/core/static/core/styles/style-home.css
+++ b/core/static/core/styles/style-home.css
@@ -77,6 +77,8 @@ header {
   padding-right: 1.875rem; /* 30px */
 }
 
+/* hasta aqui el header */
+
 .hero-section {
   height: 100vh;
   background: url("../assets/Botanical.jpg") no-repeat center center/cover;
@@ -212,6 +214,11 @@ header {
   width: auto;
   height: 200px;
   object-fit: cover;
+}
+
+.no-images h2{
+  text-align: center;
+  color: blueviolet;
 }
 
 .like-icon {
